enh(payara-download): added maven options to remove unsafe warnings in JDK 24